--- a/addons/playgama_bridge/template/index.html
+++ b/addons/playgama_bridge/template/index.html
@@ -201,6 +201,10 @@
                             },
                             'y8': {
                                 gameId: '{y8_game_id}'
+                            },
+                            'lagged': {
+                                devId: '{lagged_dev_id}',
+                                publisherId: '{lagged_publisher_id}'
                             }
                         }
                     }
