added bridge engine

--- a/addons/playgama_bridge/template/index.html
+++ b/addons/playgama_bridge/template/index.html
@@ -54,6 +54,7 @@ $GODOT_HEAD_INCLUDE
         if (!Engine.isWebGLAvailable()) {
             console.error('WebGL not available');
         } else {
+            bridge.engine = 'godot-3'
             bridge.initialize().then(() => {
                 bridge.game.setLoadingProgress(0)
                 engine.startGame({
