--- a/addons/playgama_bridge/template/index.html
+++ b/addons/playgama_bridge/template/index.html
@@ -51,14 +51,42 @@ $GODOT_HEAD_INCLUDE
         const ENGINE = new Engine(GODOT_CONFIG)
         const CANVAS = document.getElementById('canvas')
 
+        let bridgeScript = null
+        let bridgeTimeout = null
+        let bridgeLoaded = false
+
         function addLocalBridge() {
-            const scriptElement = document.createElement('script')
-            scriptElement.src = './playgama-bridge.js'
-            document.body.appendChild(scriptElement)
-            scriptElement.onload = function() {
-                initializeBridge()
+                if (bridgeLoaded) return
+                bridgeLoaded = true
+                clearTimeout(bridgeTimeout)
+
+                if (bridgeScript && bridgeScript.parentNode) {
+                    bridgeScript.onload = null
+                    bridgeScript.onerror = null
+                    bridgeScript.src = ''
+                    bridgeScript.parentNode.removeChild(bridgeScript)
+
+                }
+
+                const scriptElement = document.createElement('script')
+                scriptElement.src = './playgama-bridge.js'
+                document.body.appendChild(scriptElement)
+                scriptElement.onload = function() {
+                    initializeBridge()
+                }
             }
-        }
+
+        bridgeScript = document.createElement('script')
+        bridgeScript.src = 'https://bridge.playgama.com/v1/stable/playgama-bridge.js'
+        bridgeScript.onload = initializeBridge
+        bridgeScript.onerror = addLocalBridge
+
+        bridgeTimeout = setTimeout(() => {
+            console.warn('CDN bridge failed to load within 2 seconds, loading local bridge')
+            addLocalBridge()
+        }, 2000)
+
+        document.head.appendChild(bridgeScript)
 
         function initializeBridge() {
             bridge.engine = 'godot-3'
@@ -74,6 +102,6 @@ $GODOT_HEAD_INCLUDE
             })
         }
     //]]></script>
-    <script src="https://bridge.playgama.com/v1/stable/playgama-bridge.js" onload="initializeBridge()" onerror="addLocalBridge()"></script>
+
 </body>
 </html>                                                                                                                                                  
